Added an IDE command for deploy.

--- a/DotN64.Desktop/DotN64.Desktop.csproj
+++ b/DotN64.Desktop/DotN64.Desktop.csproj
@@ -19,6 +19,15 @@
     <WarningLevel>4</WarningLevel>
     <ExternalConsole>true</ExternalConsole>
     <Prefer32Bit>false</Prefer32Bit>
+    <CustomCommands>
+      <CustomCommands>
+        <Command>
+          <type>Custom</type>
+          <name>Deploy</name>
+          <command>make deploy</command>
+        </Command>
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
