First pass on video output. - Added SDL video output. - Send VI interrupts when the currently scanned line hits the interrupt register's. - Added some program options related to video.

--- a/DotN64.Desktop/DotN64.Desktop.csproj
+++ b/DotN64.Desktop/DotN64.Desktop.csproj
@@ -57,6 +57,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="AssemblyReleaseStreamAttribute.cs" />
     <Compile Include="Updater.cs" />
+    <Compile Include="Point.cs" />
+    <Compile Include="SDL\Window.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SDL\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
