Set the MI version register to RCP v2.0.

--- a/DotN64/DotN64.csproj
+++ b/DotN64/DotN64.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Switch.cs" />
     <Compile Include="RCP\DP\RealityCoprocessor.DisplayProcessor.Angrylion.cs" />
     <Compile Include="RCP\MI\RealityCoprocessor.MIPSInterface.InterruptPins.cs" />
+    <Compile Include="RCP\MI\RealityCoprocessor.MIPSInterface.VersionRegister.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="CPU\" />
